@@ -26,6 +26,7 @@ typedef struct {
     CameraWidget *childConfig;
     CameraList *list;
     CameraFilePath path;
+    CameraFile *file;
     GPContext *context;
     
     char *virtFolder;
